[gd_scene load_steps=29 format=2]

[ext_resource path="res://codes/player.gd" type="Script" id=1]
[ext_resource path="res://graphics/outline.shader" type="Shader" id=2]
[ext_resource path="res://graphics/sorcerer_blue.png" type="Texture" id=3]
[ext_resource path="res://codes/Sprite.gd" type="Script" id=4]
[ext_resource path="res://graphics/healthback.png" type="Texture" id=5]
[ext_resource path="res://graphics/healthfront.png" type="Texture" id=6]
[ext_resource path="res://codes/TextureProgress.gd" type="Script" id=7]
[ext_resource path="res://graphics/manafront.png" type="Texture" id=8]
[ext_resource path="res://codes/TextureProgress2.gd" type="Script" id=9]
[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=10]
[ext_resource path="res://scenes/mp hud.gd" type="Script" id=11]
[ext_resource path="res://scenes/hp hud.gd" type="Script" id=12]
[ext_resource path="res://Characters/Label.gd" type="Script" id=13]
[ext_resource path="res://graphics/bleeding.png" type="Texture" id=14]
[ext_resource path="res://Characters/bleeding.gd" type="Script" id=15]
[ext_resource path="res://graphics/burning.png" type="Texture" id=16]
[ext_resource path="res://Characters/burning.gd" type="Script" id=17]
[ext_resource path="res://graphics/paralyzed.png" type="Texture" id=18]
[ext_resource path="res://Characters/paralyzed.gd" type="Script" id=19]
[ext_resource path="res://graphics/slowed.png" type="Texture" id=20]
[ext_resource path="res://Characters/slowed.gd" type="Script" id=21]
[ext_resource path="res://sounds/431174__highpixel__fireball-explosion.wav" type="AudioStream" id=22]
[ext_resource path="res://sounds/384915__ali-6868__bow-release-bow-and-arrow.wav" type="AudioStream" id=23]
[ext_resource path="res://sounds/478179__contant-aghony__spawn-sound.wav" type="AudioStream" id=24]
[ext_resource path="res://sounds/background bone666138__8-bit-video-game-fight-music.wav" type="AudioStream" id=25]
[ext_resource path="res://scenes/backgroundMusic.gd" type="Script" id=26]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/width = 0.2
shader_param/outline_color = null

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 8, 8 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="hp" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 80.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = 48.0
margin_right = 32.0
margin_bottom = 88.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 1.19, 1.19 )
script = ExtResource( 10 )

[node name="mp hud" type="TextureProgress" parent="Camera2D"]
margin_left = -500.0
margin_top = 650.0
margin_right = -436.0
margin_bottom = 690.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 8 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp hud" type="TextureProgress" parent="Camera2D"]
margin_left = -500.0
margin_top = 550.0
margin_right = -436.0
margin_bottom = 590.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bleeding" type="TextureProgress" parent="Camera2D"]
margin_left = -500.0
margin_top = 550.0
margin_right = -436.0
margin_bottom = 590.0
texture_progress = ExtResource( 14 )
fill_mode = 3
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="burning" type="TextureProgress" parent="Camera2D"]
margin_left = -500.0
margin_top = 550.0
margin_right = -436.0
margin_bottom = 590.0
texture_progress = ExtResource( 16 )
fill_mode = 3
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paralyzed" type="TextureProgress" parent="Camera2D"]
margin_left = -500.0
margin_top = 550.0
margin_right = -436.0
margin_bottom = 590.0
texture_progress = ExtResource( 18 )
fill_mode = 3
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slowed" type="TextureProgress" parent="Camera2D"]
margin_left = -500.0
margin_top = 550.0
margin_right = -436.0
margin_bottom = 590.0
texture_progress = ExtResource( 20 )
fill_mode = 3
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="magicSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -25.0

[node name="bowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -30.0

[node name="invisibilitySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -20.0

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -30.0
autoplay = true
script = ExtResource( 26 )

